<resources>
    <string name="app_name">GpsApp</string>
    <string name="azimuth">Азимут</string>
    <string name="azimuth_inv">Обратный азимут</string>
    <string name="distance">Расстояние</string>
    <string name="lat">Широта</string>
    <string name="lon">Долгота</string>
    <string name="altitude">Высота</string>
    <string name="update">Обновлено</string>
    <string name="wait">"???"</string>
    <string name="elev">Превышение</string>
    <string name="elev_deg">Превышение град</string>
    <string name="gps_data">Показания GPS</string>
    <string name="calculated_data">Расчётные показатели</string>
    <string name="pointA">Координаты точки А</string>
    <string name="pointB">Координаты точки Б</string>
    <string name="memory">Запомнить</string>
    <string name="okd">Удалить</string>
    <string name="canceld">Отмена</string>
    <string name="save_title">Сохранить координаты</string>
    <string name="chs1">Сохранить как новые</string>
    <string name="chs2">Обновить существующие</string>
    <string name="oks1">Сохранить</string>
    <string name="oks2">Обновить</string>
    <string name="cancels">Отмена</string>
    <string name="new_loc">К-ты</string>
    <string name="snack_copy">Скопировано в буфер обмена</string>
    <string name="snack_save">Сохранено</string>
    <string name="snack_delete">Удалено</string>
    <string name="loc_question">Похоже геолокация отключена, включить?</string>
    <string name="loc_yes">Да</string>
    <string name="loc_no">Нет</string>
    <string name="loc_acess_no">В доступе отказано</string>
    <string name="left_menu_title">Сохраненные координаты</string>
</resources>
